--- a/Javascript/AULA_17/style.css
+++ b/Javascript/AULA_17/style.css
@@ -93,10 +93,17 @@ main > section > div > h4 {
     background-color: rgb(78, 94, 94);
 }
 
+main > section > div > div {
+    background-color: rgb(78, 94, 94);
+}
+
 main > section > div > div > p {
     background-color: rgb(78, 94, 94);
 }
 
+main > section > div > div > p > button {
+    background-color: rgb(78, 94, 94);
+}
 .categoriesHeader {
     background-color:  rgb(68, 83, 83);
 }
@@ -109,9 +116,14 @@ main > section > div > div > p {
     background-color: rgb(78, 94, 94);
 }
 
+
 .product > img {
     width: 100%;
     height: 70%;
+}
+
+.product > button > img {
+    background-color: rgb(78, 94, 94);
 }
 
 footer {
