--- a/Javascript/AULA_17/style.css
+++ b/Javascript/AULA_17/style.css
@@ -120,10 +120,36 @@ main > section > div > div > p > button {
 .product > img {
     width: 100%;
     height: 70%;
+    background-color: rgb(78, 94, 94);
 }
 
 .product > button > img {
     background-color: rgb(78, 94, 94);
+}
+
+.productsList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.product h4 {
+    font-size: 1.2rem;
+    margin-top: 0.5rem;
+}
+
+.product div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.product button {
+    background-color:  rgb(78, 94, 94);
+    border: none;
+    padding: 5px;
 }
 
 footer {
