--- a/Javascript/AULA_17/style.css
+++ b/Javascript/AULA_17/style.css
@@ -6,6 +6,49 @@
     color: rgb(218, 225, 229);
 }
 
+.modal {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.522);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalContent {
+    background-color: white;
+    width: 70%;
+    height: 50%;
+    border-radius: 16px;
+    position: relative;
+    
+}
+
+.closeModal {
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    font-size: 1.3rem;
+    padding: 0.4rem;
+    background-color:  rgb(63, 111, 111);
+    border: 0;
+    border-radius: 4px;
+}
+
+.toast {
+    position: fixed;
+    top: 8rem;
+    right: 2rem;
+    padding: 1rem;
+    background-color: rgb(63, 111, 111);
+    border-radius: 8px;
+    transform: translate(150px);
+    transition: 2s;
+}
+
 body {
     min-height: 100vh;
     background-color: rgb(65, 80, 80);
